fixed layout shifts in the dropdown when clicked

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -352,13 +352,6 @@ input[type="text"].searchInput::-webkit-input-placeholder {
   .brandLogo {
     height: 42px;
   }
-  .langBtn {
-    height: 42px;
-  }
-  .langBtn,
-  .dropdownItem {
-    padding: 11px 12px;
-  }
   .searchInput {
     padding: 9px 45px 9px 18px;
   }
@@ -373,9 +366,6 @@ input[type="text"].searchInput::-webkit-input-placeholder {
   }
 }
 @media (max-width: 767.98px) {
-  .langBtn {
-    height: 38px;
-  }
   .searchInput {
     padding: 5px 35px 5px 16px;
   }
